<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="96dp"
        android:scrollHorizontally="true"
        android:text="@string/hi_user"
        android:textColorLink="#FF0101"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="213dp"
        android:layout_height="54dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="196dp"
        android:onClick="showFiles"
        android:text="@string/show_files"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="213dp"
        android:layout_height="54dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="23dp"
        android:onClick="shareFiles"
        android:text="@string/share_files"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="19dp"
        android:onClick="availableFiles"
        android:text="@string/available_files"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>